# transcribe_audio_whisper

./: .envrc  .gitignore  CLAUDE.md  README.md  pyproject.toml  pytest.ini
src/: __init__.py  app.py  cli.py  config.py  file_processor.py  formatters.py  main.py  transcriber.py
tests/: __init__.py  test_cli.py  test_config.py  test_file_processor.py  test_formatters.py  test_transcriber.py
