[project]
name = "transcribe_audio_whisper"
version = "0.1.0"
description = "transcribe_audio_whisper project"
authors = [{ name = "ab" }]
requires-python = ">=3.12"
dependencies = [
    "click>=8.2.1",
    "loguru>=0.7.3",
    "openai-whisper>=20250625",
    "pydantic>=2.11.7",
    "pytest>=8.4.1",
    "rich>=14.0.0",
    "ruff>=0.12.5",
    "torch>=2.7.1",
    "torchaudio>=2.7.1",
]
